syntax = "proto3";

package proto;

// make sure installed -> protoc, protoc-gen-go, protoc-gen-go-grpc
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/movie.proto
option go_package = "example.com/go-grpc-crud";

service MovieService {
    rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse) {}
    rpc GetMovie(ReadMovieRequest) returns (ReadMovieResponse) {}
    rpc GetMovies(ReadMoviesRequest) returns (ReadMoviesResponse) {}
    rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse) {}
    rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {}
}

message Movie {
    string id = 1;
    string title = 2;
    string genre = 3;
}

message CreateMovieRequest {
    Movie movie = 1;
}

message CreateMovieResponse {
    Movie movie = 1;
}

message ReadMovieRequest {
    string id = 1;
}

message ReadMovieResponse {
    Movie movie = 1;
}

message ReadMoviesRequest {
}

message ReadMoviesResponse {
    repeated Movie movies = 1;
}

message UpdateMovieRequest {
    Movie movie = 1;
}

message UpdateMovieResponse {
    Movie movie = 1;
}

message DeleteMovieRequest {
    string id = 1;
}

message DeleteMovieResponse {
    bool success = 1;
}